--- a/leetmetric/package.json
+++ b/leetmetric/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -17,6 +18,10 @@
     "cors": "^2.8.5",
     "node-fetch": "^3.3.2"
   },
+  "engines": {
+    "node": "18.x"
+  },
+
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
